make menu fade in delayed. Finish first draft of carousel

--- a/bio/index.html
+++ b/bio/index.html
@@ -1,21 +1,74 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><title>Emily Hansel | Bio</title><link rel="shortcut icon" href="../assets/img/favicon.ico"><link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon"><link rel="stylesheet" href="../assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="https://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below or contact me at <a href="mailto:emilylhansel@gmail.com">emilylhansel@gmail.com</a></p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><input type="hidden" name="_next" value="#submitted"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input tabindex="4" type="submit" value="Send"></form></div><div class="home-button"> <a href="/" alt="Emily">E  </a></div><div class="body-container bio"><div class="bio-container"><h3>Bio</h3><p><span class="bio-highlight">Emily Hansel</span> began her dance training in Rochester, 
-Minnesota at Allegro School of Dance and the Minnesota Youth Ballet Academy. She performed 
-with Minneapolis’s Metropolitan Ballet, danced in 
-several projects at the Ritz Theater in Minneapolis, and founded the Summer Choreography Workshop in Rochester. 
-She attended the summer intensives of Alonzo King LINES Ballet, the San Francisco Conservatory of Dance, and the 
-American Ballet Theatre. In 2012, at age 17, <span class="bio-highlight">Emily</span> 
-was awarded the Homer Avila Scholarship by Alonzo King LINES Ballet.</p><p>In 2014, <span class="bio-highlight">Emily</span> attended the American Dance Festival School where she performed in the original work of 
-choreographer Carl Flink. In 2015, <span class="bio-highlight">Emily</span> attended the University of South Florida’s Dance in Paris program 
-where she studied under dancers from companies such as Tanztheater Wuppertal (Pina Bausch), 
-Chunky Move (Anouk van Dijk), and Nederlands Dans Theater.</p><p>Currently in her third year of study at the University of South Florida, <span class="bio-highlight">Emily</span> has established herself 
-as a dynamic performer, choreographer, scholar, and leader. She has performed in works by Ohad Naharin, 
-Alonzo King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne 
-Travers and, in October 2015, she performed at the International Creative Dance Seminar in Beijing, China. 
-<span class="bio-highlight">Emily</span>’s choreography has been presented multiple times in USF’s annual Student Dance Production among other 
-shows. <span class="bio-highlight">Emily</span> is currently conducting research for her Honors Thesis, “The Representation of Ideas by Words 
-and Art,” which will culminate in the choreography and performance of a solo in April 2015.</p><p><span class="bio-highlight">Emily</span> is the President of USF’s Student Dance Production Board, which entails overseeing every aspect of 
-production for the annual student-run and student-choreographed concert among other managerial and 
-organizational responsibilities. She has worked on the TEDxUSF Affairs Team for two years and has 
-held various other leadership positions in the USF community. <span class="bio-highlight">Emily</span> is on her way to becoming a 
-King O'Neal Scholar and she will graduate in May 2016 as a Provost's Scholar with a BFA in Dance 
-Performance and an honors degree.</p></div></div></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Emily Hansel | Bio</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico">
+    <link rel="icon" href="../assets/img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/css/index.css">
+  </head>
+  <body>
+    <div class="nav-opener"><i class="ion-navicon"></i></div>
+    <div class="mobile-nav">
+      <div class="nav-items">
+        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
+        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
+        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
+        <div class="nav-item"><a class="site-link" href="/media" alt="video">media</a></div>
+        <div class="nav-item"><span class="contact">contact</span></div>
+      </div>
+    </div>
+    <div class="contact-form"><span>x</span>
+      <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
+        <p>Fill out the form below or contact me at <a href="mailto:emilylhansel@gmail.com">emilylhansel@gmail.com</a></p>
+        <input tabindex="1" type="text" name="name" placeholder="Name">
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
+        <input type="hidden" name="_next" value="#submitted">
+        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <input tabindex="4" type="submit" value="Send">
+      </form>
+    </div>
+    <div class="home-button"><a href="/" alt="Emily">E<img src="../assets/img/dancing/crop/1.png"></a></div>
+    <div class="body-container bio">
+      <div class="bio-container">
+        <h3>Bio</h3>
+        <p>
+          <em>Emily Hansel</em> began her dance training in Rochester, 
+          Minnesota at Allegro School of Dance and the Minnesota Youth Ballet Academy. She performed 
+          with Minneapolis’s Metropolitan Ballet, danced in 
+          several projects at the Ritz Theater in Minneapolis, and founded the Summer Choreography Workshop in Rochester. 
+          She attended the summer intensives of Alonzo King LINES Ballet, the San Francisco Conservatory of Dance, and the 
+          American Ballet Theatre. In 2012, at age 17, Emily 
+          was awarded the Homer Avila Scholarship by Alonzo King LINES Ballet.
+        </p>
+        <p>
+          In 2014, Emily attended the American Dance Festival School where she performed in the original work of 
+          choreographer Carl Flink. In 2015, Emily attended the University of South Florida’s Dance in Paris program 
+          where she studied under dancers from companies such as Tanztheater Wuppertal (Pina Bausch), 
+          Chunky Move (Anouk van Dijk), and Nederlands Dans Theater.
+        </p>
+        <p>
+          Currently in her third year of study at the University of South Florida, Emily has established herself 
+          as a dynamic performer, choreographer, scholar, and leader. She has performed in works by Ohad Naharin, 
+          Alonzo King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne 
+          Travers and, in October 2015, she performed at the International Creative Dance Seminar in Beijing, China. 
+          Emily’s choreography has been presented multiple times in USF’s annual Student Dance Production among other 
+          shows. Emily is currently conducting research for her Honors Thesis, “The Representation of Ideas by Words 
+          and Art,” which will culminate in the choreography and performance of a solo in April 2015.
+        </p>
+        <p>
+          Emily is the President of USF’s Student Dance Production Board, which entails overseeing every aspect of 
+          production for the annual student-run and student-choreographed concert among other managerial and 
+          organizational responsibilities. She has worked on the TEDxUSF Affairs Team for two years and has 
+          held various other leadership positions in the USF community. Emily is on her way to becoming a 
+          King O'Neal Scholar and she will graduate in May 2016 as a Provost's Scholar with a BFA in Dance 
+          Performance and an honors degree.
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
