--- a/bio/index.html
+++ b/bio/index.html
@@ -36,7 +36,9 @@
     <div class="body-container bio">
       <div class="bio-container">
         <h3>Bio</h3>
+        <div class="headshot"></div>
         <p>
+          <img src="../assets/img/headshot.png" alt="headshot">
           <em>Emily Hansel</em> began her dance training in Rochester, 
           Minnesota at Allegro School of Dance and the Minnesota Youth Ballet Academy. She performed 
           with Minneapolis’s Metropolitan Ballet, danced in 
