make secondary set of Emilyy changes

--- a/bio/index.html
+++ b/bio/index.html
@@ -66,7 +66,7 @@
         <p>
           Emily’s choreography has been presented several times in USF’s annual 
           Student Dance Production among other shows at the University and 
-          throughout Florida. Her work, No Reason, was selected to be 
+          throughout Florida. Her work, <i>No Reason</i>, was selected to be 
           presented at the Southeast ACDA Conference in March 2016. Emily 
           is currently seeking out new venues where she can share her most 
           recent project, <i>untitled_37.txt</i>.
