--- a/bio/index.html
+++ b/bio/index.html
@@ -36,12 +36,54 @@
     <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
     <div class="body-container bio">
       <div class="bio-container">
-        <h1>Bio</h1><p><img src="../assets/img/headshot.png" alt="Emily Hansel"> Emily Hansel is a San Francisco-based dancer and choreographer. She currently performs with SOULSKIN Dance as well as several independent Bay Area choreographers. Emily recently presented choreography at Little Boxes Theater and she is now creating a new work that will be performed at the Joe Goode Annex in March, 2017.</p>
-<p>Emily began her dance training in Rochester, Minnesota at Allegro School of Dance and Minnesota Youth Ballet Academy. She performed with Minneapolis’s Metropolitan Ballet, danced in several projects at the Ritz Theater in Minneapolis, and founded the Summer Choreography Workshop in Rochester. She attended the summer intensives of Alonzo King LINES Ballet, the San Francisco Conservatory of Dance, and American Ballet Theatre. In 2012, at age 17, Emily received the Homer Avila Award from Alonzo King LINES Ballet.</p>
-<p>Emily received her BFA in Dance Performance from the <a href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>, where she established herself as a dynamic performer, choreographer, scholar, and leader. She performed in works by Ohad Naharin, Alonzo King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne Travers. In 2015, she performed at the International Creative Dance Seminar at the Beijing Dance Academy and travelled to France with USF’s Dance in Paris Program. In 2014, Emily attended the American Dance Festival School where she worked with choreographer Carl Flink and performed in his ADF-commissioned piece, Unkindness of Ravens.</p>
-<p>Emily’s choreography has been presented several times in USF’s annual Student Dance Production among other shows at the University and throughout Florida. Her work, No Reason, was selected to be presented at the Southeast ACDA Conference in March 2016. It received rave reviews from the adjudicators for its originality as a “sophisticated fusion of dance theater, improvisation, and contemporary movement.”</p>
-<p>In addition to performance and choreography, Emily continually finds herself drawn to jobs that revolve around administration and operations. She served as the President of USF’s Student Dance Production Board, which involved overseeing every aspect of production for the annual student-run and student-choreographed concert among other managerial and organizational responsibilities. She worked on the TEDxUSF Affairs Team for two years and held various other leadership positions in the USF community. Emily graduated summa cum laude in May 2016 as a King O'Neal Scholar and a Provost's Scholar with a BFA in Dance Performance and an Honors College Degree.</p>
-
+        <h1>Bio</h1>
+        <p>
+          <img src="../assets/img/headshot.png" alt="Emily Hansel"> Emily Hansel is
+          a San Francisco-based dancer and choreographer. She currently performs with
+          SOULSKIN Dance as well as several independent Bay Area choreographers.
+          Emily recently presented choreography at Little Boxes Theater and she is
+          now creating a new work that will be performed at the Joe Goode Annex in March, 2017.
+        </p>
+        <p>
+          Emily began her dance training in Rochester, Minnesota at Allegro School
+          of Dance and Minnesota Youth Ballet Academy. She performed with Minneapolis’s
+          Metropolitan Ballet, danced in several projects at the Ritz Theater in
+          Minneapolis, and founded the Summer Choreography Workshop in Rochester.
+          She attended the summer intensives of Alonzo King LINES Ballet, the San
+          Francisco Conservatory of Dance, and American Ballet Theatre. In 2012,
+          at age 17, Emily received the Homer Avila Award from Alonzo King LINES Ballet.
+        </p>
+        <p>
+          Emily received her BFA in Dance Performance from the
+          <a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>,
+          where she established herself as a dynamic performer, choreographer, scholar, and leader.
+          She performed in works by Ohad Naharin, Alonzo King, Robert Moses, Maurice Causey,
+          Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne Travers. In 2015,
+          she performed at the International Creative Dance Seminar at the Beijing Dance
+          Academy and travelled to France with USF’s Dance in Paris Program. In 2014,
+          Emily attended the American Dance Festival School where she worked with
+          choreographer Carl Flink and performed in his ADF-commissioned piece, Unkindness of Ravens.
+        </p>
+        <p>
+          Emily’s choreography has been presented several times in USF’s annual Student
+          Dance Production among other shows at the University and throughout Florida.
+          Her work, No Reason, was selected to be presented at the Southeast ACDA
+          Conference in March 2016. It received rave reviews from the adjudicators
+          for its originality as a “sophisticated fusion of dance theater, improvisation,
+            and contemporary movement.”
+        </p>
+        <p>
+          In addition to performance and choreography, Emily continually finds
+          herself drawn to jobs that revolve around administration and operations.
+          She served as the President of USF’s Student Dance Production Board, which
+          involved overseeing every aspect of production for the annual student-run and
+          student-choreographed concert among other managerial and organizational responsibilities.
+          She worked on the TEDxUSF Affairs Team for two years and held various other
+          leadership positions in the USF community. Emily graduated summa cum laude
+          in May 2016 as a King O'Neal Scholar and a Provost's Scholar with a BFA
+          in Dance Performance and an Honors College Degree.
+          
+        </p>
       </div>
       <p class="credits">
         Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
