--- a/bio/index.html
+++ b/bio/index.html
@@ -1,110 +1,39 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream ">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/assets/img/favicon2.ico">
-    <link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon">
-    <meta property="og:title" content="Emily Hansel">
-    <meta property="og:description" content="dancer | choreographer">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://emilyhansel.me">
-    <meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG">
-    <title>Emily Hansel | Bio</title>
-    <link rel="stylesheet" href="../assets/css/index.css">
-  </head>
-  <body>
-    <div class="nav-opener"><i class="ion-navicon"></i></div>
-    <div class="mobile-nav">
-      <div class="nav-items">
-        <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
-        <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
-        <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
-        <div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div>
-        <div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div>
-        <div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div>
-        <div class="nav-item"><span class="contact">contact</span></div>
-      </div>
-    </div>
-    <div class="contact-form"><span>x</span>
-      <form method="POST" action="http://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below to contact me</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name">
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
-        <input class="email-send" tabindex="4" type="submit" value="Send">
-      </form>
-    </div>
-    <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
-    <div class="body-container bio">
-      <div class="bio-container">
-        <h1>Bio</h1>
-        <p>
-          <img src="../assets/img/headshot.png" alt="Emily Hansel"> Emily Hansel is
-          a San Francisco-based dancer and choreographer. She currently performs with
-          SOULSKIN Dance as well as several independent Bay Area choreographers.
-          Emily recently presented choreography at Little Boxes Theater and she is
-          now creating a new work that will be performed at the Joe Goode Annex in March, 2017.
-        </p>
-        <p>
-          Emily began her dance training in Rochester, Minnesota at Allegro School
-          of Dance and Minnesota Youth Ballet Academy. She performed with Minneapolis’s
-          Metropolitan Ballet, danced in several projects at the Ritz Theater in
-          Minneapolis, and founded the Summer Choreography Workshop in Rochester.
-          She attended the summer intensives of Alonzo King LINES Ballet, the San
-          Francisco Conservatory of Dance, and American Ballet Theatre. In 2012,
-          at age 17, Emily received the Homer Avila Award from Alonzo King LINES Ballet.
-        </p>
-        <p>
-          Emily received her BFA in Dance Performance from the
-          <a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>,
-          where she established herself as a dynamic performer, choreographer, scholar, and leader.
-          She performed in works by Ohad Naharin, Alonzo King, Robert Moses, Maurice Causey,
-          Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne Travers. In 2015,
-          she performed at the International Creative Dance Seminar at the Beijing Dance
-          Academy and travelled to France with USF’s Dance in Paris Program. In 2014,
-          Emily attended the American Dance Festival School where she worked with
-          choreographer Carl Flink and performed in his ADF-commissioned piece, Unkindness of Ravens.
-        </p>
-        <p>
-          Emily’s choreography has been presented several times in USF’s annual Student
-          Dance Production among other shows at the University and throughout Florida.
-          Her work, No Reason, was selected to be presented at the Southeast ACDA
-          Conference in March 2016. It received rave reviews from the adjudicators
-          for its originality as a “sophisticated fusion of dance theater, improvisation,
-            and contemporary movement.”
-        </p>
-        <p>
-          In addition to performance and choreography, Emily continually finds
-          herself drawn to jobs that revolve around administration and operations.
-          She served as the President of USF’s Student Dance Production Board, which
-          involved overseeing every aspect of production for the annual student-run and
-          student-choreographed concert among other managerial and organizational responsibilities.
-          She worked on the TEDxUSF Affairs Team for two years and held various other
-          leadership positions in the USF community. Emily graduated summa cum laude
-          in May 2016 as a King O'Neal Scholar and a Provost's Scholar with a BFA
-          in Dance Performance and an Honors College Degree.
-          
-        </p>
-      </div>
-      <p class="credits">
-        Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
-        Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a>
-      </p>
-    </div>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83432320-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/index.js"></script>
-    <script>sessionStorage.seen = true;</script>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="description" content="Emily Hansel - Dancer, Choreographer - San Francisco, CA. Notable works include untitled_37.txt, No Reason, Vertical Words, Not Empty, Insatiable, and Scream "><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="shortcut icon" href="/assets/img/favicon2.ico"><link rel="icon" href="/assets/img/favicon2.ico" type="image/x-icon"><meta property="og:title" content="Emily Hansel"><meta property="og:description" content="dancer | choreographer"><meta property="og:type" content="website"><meta property="og:url" content="http://emilyhansel.me"><meta property="og:image" content="http://emilyhansel.me/assets/img/facebook.PNG"><title>Emily Hansel | Bio</title><link rel="stylesheet" href="../assets/css/index.css"></head><body><div class="nav-opener"><i class="ion-navicon"></i></div><div class="mobile-nav"><div class="nav-items"><div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div><div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div><div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div><div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div><div class="nav-item"><a class="site-link" href="/statement" alt="artist statement">artist statement</a></div><div class="nav-item"><a class="site-link" href="/photo" alt="photo">photo</a></div><div class="nav-item"><a class="site-link" href="/video" alt="video">video</a></div><div class="nav-item"><span class="contact">contact</span></div></div></div><div class="contact-form"><span>x</span><form method="POST" action="http://formspree.io/emilylhansel@gmail.com"><p>Fill out the form below to contact me</p><input tabindex="1" type="text" name="name" placeholder="Name"><input tabindex="2" type="email" name="_replyto" placeholder="Email"><textarea tabindex="3" name="message" placeholder="Type your message here"></textarea><input class="email-send" tabindex="4" type="submit" value="Send"></form></div><div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/1.png"></a></div><div class="body-container bio"><div class="bio-container"><h1>Bio</h1><p><img src="../assets/img/headshot.png" alt="Emily Hansel"> Emily Hansel is
+a San Francisco-based dancer and choreographer. She currently performs with
+SOULSKIN Dance as well as several independent Bay Area choreographers.
+Emily recently presented choreography at Little Boxes Theater and she is
+now creating a new work that will be performed at the Joe Goode Annex in March, 2017.</p><p>Emily began her dance training in Rochester, Minnesota at Allegro School
+of Dance and Minnesota Youth Ballet Academy. She performed with Minneapolis’s
+Metropolitan Ballet, danced in several projects at the Ritz Theater in
+Minneapolis, and founded the Summer Choreography Workshop in Rochester.
+She attended the summer intensives of Alonzo King LINES Ballet, the San
+Francisco Conservatory of Dance, and American Ballet Theatre. In 2012,
+at age 17, Emily received the Homer Avila Award from Alonzo King LINES Ballet.</p><p>Emily received her BFA in Dance Performance from the
+<a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>,
+where she established herself as a dynamic performer, choreographer, scholar, and leader.
+She performed in works by Ohad Naharin, Alonzo King, Robert Moses, Maurice Causey,
+Bliss Kohlmyer, Paula Nunez, Andrew Carroll, and Jeanne Travers. In 2015,
+she performed at the International Creative Dance Seminar at the Beijing Dance
+Academy and travelled to France with USF’s Dance in Paris Program. In 2014,
+Emily attended the American Dance Festival School where she worked with
+choreographer Carl Flink and performed in his ADF-commissioned piece, Unkindness of Ravens.</p><p>Emily’s choreography has been presented several times in USF’s annual Student
+Dance Production among other shows at the University and throughout Florida.
+Her work, No Reason, was selected to be presented at the Southeast ACDA
+Conference in March 2016. It received rave reviews from the adjudicators
+for its originality as a “sophisticated fusion of dance theater, improvisation,
+  and contemporary movement.”</p><p>In addition to performance and choreography, Emily continually finds
+herself drawn to jobs that revolve around administration and operations.
+She served as the President of USF’s Student Dance Production Board, which
+involved overseeing every aspect of production for the annual student-run and
+student-choreographed concert among other managerial and organizational responsibilities.
+She worked on the TEDxUSF Affairs Team for two years and held various other
+leadership positions in the USF community. Emily graduated summa cum laude
+in May 2016 as a King O'Neal Scholar and a Provost's Scholar with a BFA
+in Dance Performance and an Honors College Degree.
+</p></div><p class="credits">Website by <a href="//mfix22.github.io" target="_blank" alt="Michael Fix Freelance">Michael Fix</a> |
+Cover photos by <a href="http://www.jlam.com/" target="_blank" alt="Jason Lam Photography">Jason Lam</a></p></div><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-83432320-1', 'auto');
+ga('send', 'pageview');</script><script src="/assets/js/jquery.js"></script><script src="/assets/js/index.js"></script><script>sessionStorage.seen = true;</script></body></html>
