--- a/bio/index.html
+++ b/bio/index.html
@@ -52,7 +52,7 @@
           <a href="https://www.marikabrussel.com/" target="_blank">Marika Brussel</a>,
           Brannigan Dance Works, SOULSKIN Dance, and as a guest
           with Robert Moses' Kin. Emily's choreography has been presented at the
-          Joe Goode Annex, Little Boxes Theater, SAFEhouse for the Performing Arts,
+          Joe Goode Annex, CounterPulse, Little Boxes Theater, SAFEhouse for the Performing Arts,
           LEVYsalon, and various venues in Tampa, West Palm Beach, Atlanta, and Paris (Fr.).
         </p>
         <p>
