--- a/bio/index.html
+++ b/bio/index.html
@@ -53,7 +53,7 @@
           Brannigan Dance Works, SOULSKIN Dance, and as a guest
           with Robert Moses' Kin. Emily's choreography has been presented at the
           Joe Goode Annex, CounterPulse, Little Boxes Theater, SAFEhouse for the Performing Arts,
-          LEVYsalon, and various venues in Tampa, West Palm Beach, Atlanta, and Paris (Fr.).
+          LEVYsalon, and various venues in Tampa, West Palm Beach, and Atlanta.
         </p>
         <p>
           Emily has trained for 12 years in ballet, modern, jazz, tap, contact improvisation,
