--- a/bio/index.html
+++ b/bio/index.html
@@ -102,7 +102,7 @@
       ga('create', 'UA-83432320-1', 'auto');
       ga('send', 'pageview');
     </script>
-    <script src="/assets/js/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/assets/js/index.js"></script>
     <script>sessionStorage.seen = true;</script>
   </body>
