--- a/bio/index.html
+++ b/bio/index.html
@@ -43,7 +43,7 @@
       <div class="bio-container">
         <h1>Bio</h1>
         <p>
-          <img src="../assets/img/headshot.jpg" height="200" alt="Emily Hansel"> Emily Hansel
+          <img src="../assets/img/headshot-2.jpg" height="200" alt="Emily Hansel"> Emily Hansel
           is a San Francisco-based dancer and choreographer.
           Originally from Rochester, Minnesota, she received her BFA in Dance
           from the University of South Florida in 2016. Since then, Emily
