--- a/bio/index.html
+++ b/bio/index.html
@@ -72,7 +72,7 @@
           where she established herself as a dynamic performer, choreographer,
           scholar, and leader. She performed in works by Ohad Naharin, Alonzo King,
           Robert Moses, Katie Faulkner, Maurice Causey, Bliss Kohlmyer, Paula Nunez,
-          Andrew Carroll, Jeanne Travers, and Xiao Kiang Rong among others. In 2015,
+          Andrew Carroll, Jeanne Travers, and Xiao Xiang Rong among others. In 2015,
           she performed at the International Creative Dance Seminar at the Beijing
           Dance Academy and travelled to France with USF’s Dance in Paris Program.
           In 2014, Emily attended the American Dance Festival School where she worked
