--- a/bio/index.html
+++ b/bio/index.html
@@ -38,7 +38,7 @@
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
-    <div class="home-button"><a href="/" alt="Emily">E<img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
+    <div class="home-button"><a href="/" alt="Emily"> <img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
     <div class="body-container bio">
       <div class="bio-container">
         <h1>Bio</h1>
