--- a/digital-art/index.html
+++ b/digital-art/index.html
@@ -31,10 +31,10 @@
     </div>
     <div class="contact-form"><span>x</span>
       <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
-        <p>Fill out the form below to contact me</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name">
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email">
-        <textarea tabindex="3" name="message" placeholder="Type your message here"></textarea>
+        <p>Fill out the form below to contact Emily</p>
+        <input tabindex="1" type="text" name="name" placeholder="Name" required>
+        <input tabindex="2" type="email" name="_replyto" placeholder="Email" required>
+        <textarea tabindex="3" name="message" placeholder="Type your message here" required></textarea>
         <input class="email-send" tabindex="4" type="submit" value="Send">
       </form>
     </div>
