--- a/bio/index.html
+++ b/bio/index.html
@@ -71,17 +71,17 @@
           King O’Neal Scholar, and Provost’s Scholar. She then relocated to San Francisco.
         </p>
         <p>
-          Emily currently dances for
-          <a href="https://www.robertmoseskin.org/" target="_blank">Robert Moses’ KIN</a>,
-          <a href="https://www.postballet.org/" target="_blank">Post:Ballet</a>, and
-          <a href="http://mfdpsf.org/" target="_blank">Mark Foehringer Dance Project</a>
-          and recently performed Cunningham
-          repertory in <em>Signals from the West: Bay Area Artists In Conversation
-          with Merce Cunningham at 100</em>. Emily has also performed with The
-          Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza
-          Cunningham, Kristin Damrow Company, Brannigan Dance Works,
-          and SOULSKIN Dance. Emily’s choreography has been presented
-          at numerous venues throughout the Bay Area, Georgia, and Florida.
+          Emily currently dances for <a href="https://www.postballet.org/" target="_blank">Post:Ballet</a>, 
+          <a href="https://www.robertmoseskin.org/" target="_blank">Robert Moses’ KIN</a>, 
+          <a href="http://mfdpsf.org/" target="_blank">Mark Foehringer Dance Project</a>, 
+          and <a href="http://factsf.org/" target="_blank">FACT/SF</a> and recently performed 
+          Cunningham repertory in 
+          <i><a href="https://www.hopemohr.org/2019-bridge-project" target="_blank">Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</a></i>.
+          Emily has also performed with The Anata Project, Talli Jackson, 
+          Marika Brussel, Alma Esperanza Cunningham, Kristin Damrow Company, 
+          Brannigan Dance Works, and SOULSKIN Dance. Emily’s choreography has been 
+          presented at numerous venues throughout the Bay Area, Georgia, and Florida. 
+          She is currently under the choreographic mentorship of RoundAntennae.
         </p>
         <p>
           When she isn’t performing or choreographing, Emily teaches ballet
