--- a/bio/index.html
+++ b/bio/index.html
@@ -45,7 +45,7 @@
       <div class="bio-container">
         <h1>Bio</h1>
         <p>
-          <img src="../assets/img/headshot-2.jpg" height="200" alt="Emily Hansel"> Emily Hansel
+          <img src="../assets/img/headshot-2.jpg" height="150px" alt="Emily Hansel"> Emily Hansel
           is a San Francisco-based dancer and choreographer.
           <br />
           <br />
