--- a/bio/index.html
+++ b/bio/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://emilyhansel.me">
     <meta property="og:image" content="https://emilyhansel.me/assets/img/facebook.PNG">
     <title>Emily Hansel | Bio</title>
-    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="../assets/css/index.css?v=1">
   </head>
   <body>
     <div class="nav-opener">
