--- a/bio/index.html
+++ b/bio/index.html
@@ -23,7 +23,7 @@
       <div class="nav-items">
         <div class="nav-item"><a class="site-link" href="/" alt="home">home</a></div>
         <div class="nav-item"><a class="site-link" href="/bio" alt="bio">bio</a></div>
-        <div class="nav-item"><a class="site-link" href="assets/resume.pdf" target="_blank" alt="resume">resume</a></div>
+        <div class="nav-item"><a class="site-link" href="assets/resume.pdf?v=1" target="_blank" alt="resume">resume</a></div>
         <div class="nav-item"><a class="site-link" href="/choreography" alt="choreography">choreography</a></div>
         <div class="nav-item"><a class="site-link" href="/digital-art" alt="digital art">digital art</a></div>
         <div class="nav-item"><a class="site-link" href="/photos" alt="photos">photos</a></div>
@@ -45,50 +45,17 @@
       <div class="bio-container">
         <h1>Bio</h1>
         <p>
-          <img src="../assets/img/headshot-2.jpg" height="150px" alt="Emily Hansel"> Emily Hansel
-          is a San Francisco-based dancer and choreographer.
+          <img src="../assets/img/headshot-2.jpg" height="150px" alt="Emily Hansel"> Emily Hansel (she/they) is a San Francisco-based dancer, choreographer, dance teacher, arts administrator, and artist advocate.
           <br />
           <br />
-          Originally from Rochester, Minnesota, Emily began her dance training
-          at Allegro School of Dance and Minnesota Youth Ballet Academy.
-          This training was augmented by the summer intensives of Alonzo
-          King LINES Ballet, the San Francisco Conservatory of Dance,
-          and American Ballet Theatre. In 2012, Emily received the Homer
-          Avila Award from Alonzo King LINES Ballet.
+          Originally from Rochester, Minnesota, Emily began her dance training at Allegro School of Dance and Minnesota Youth Ballet Academy. This training was augmented by the summer intensives of Alonzo King LINES Ballet, the San Francisco Conservatory of Dance, and American Ballet Theatre. In 2012, Emily received the Homer Avila Award from Alonzo King LINES Ballet.
         </p>
+        <p>Emily received her BFA in Dance from the <a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>, where she performed in works by Ohad Naharin, Alonzo King, Robert Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll, Jeanne Travers, and Xiao Xiang Rong among others and served as President of the Student Dance Production Board. In 2014, Emily attended the American Dance Festival School where she worked with choreographer Carl Flink and performed in his ADF-commissioned piece, <em>Unkindness of Ravens</em>. In 2015, she performed at the International Creative Dance Seminar at the Beijing Dance Academy and traveled to France with USF’s Dance in Paris Program. Upon her graduation in 2016, Emily received the awards of USF Undergraduate Scholar, King O’Neal Scholar, and Provost’s Scholar. She then relocated to San Francisco.</p>
+        <p>Emily currently dances for <a href="https://www.postballet.org/" target="_blank">Post:ballet</a>, <a href="https://www.robertmoseskin.org/" target="_blank">Robert Moses’ KIN</a>, <a href="http://mfdpsf.org/" target="_blank">Mark Foehringer Dance Project</a>, and Christy Funsch, and recently performed Cunningham repertory in <i><a href="https://www.hopemohr.org/2019-bridge-project" target="_blank">Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</a></i>. Emily has also performed with Garrett + Moulton Productions, FACT/SF, ZiRu Dance, The Anata Project, Talli Jackson, Marika Brussel, Alma Esperanza Cunningham, Kristin Damrow & Company, Brannigan Dance Works, and SOULSKIN Dance. </p>
+        <p>Emily’s choreographic work centers the dancer’s experience. Currently, Emily is creating her first self-produced evening-length choreographic work, <i><a href="/fourbyfour">Four by Four</a></i>, which will premiere at ODC Theater May 26-28, 2022. Most recently, Emily was commissioned to create a new work for the Berkeley Ballet Theater Studio Company, which premiered in March 2022 at BAMPFA. Emily has also choreographed work for the Lindenwood University Dance Program and presented work at numerous venues throughout the Bay Area. Emily is a RoundAntennae choreographer, under the mentorship of KT Nelson.</p>
+        <p>Emily advocates for equitable and ethical working conditions for dancers, and she has written numerous articles on this topic for the “Life as a Modern Dancer” blog. Emily is a proud member of the Leadership Committee at Dance Artists’ National Collective. </p>
         <p>
-          Emily received her BFA in Dance from the
-          <a target="_blank" href="http://theatreanddance.arts.usf.edu/content/go/dance/">University of South Florida</a>,
-          where she performed in works by Ohad Naharin, Alonzo King, Robert
-          Moses, Maurice Causey, Bliss Kohlmyer, Paula Nunez, Andrew Carroll,
-          Jeanne Travers, and Xiao Xiang Rong among others. In 2014, Emily attended the
-          American Dance Festival School where she worked with
-          choreographer Carl Flink and performed in his ADF-commissioned piece,
-          <em>Unkindness of Ravens</em>. In 2015, she performed at the International
-          Creative Dance Seminar at the Beijing Dance Academy and travelled
-          to France with USF’s Dance in Paris Program. Upon her graduation
-          in 2016, Emily received the awards of USF Undergraduate Scholar,
-          King O’Neal Scholar, and Provost’s Scholar. She then relocated to San Francisco.
-        </p>
-        <p>
-          Emily currently dances for <a href="https://www.postballet.org/" target="_blank">Post:Ballet</a>, 
-          <a href="https://www.robertmoseskin.org/" target="_blank">Robert Moses’ KIN</a>, 
-          <a href="http://mfdpsf.org/" target="_blank">Mark Foehringer Dance Project</a>, 
-          and <a href="http://factsf.org/" target="_blank">FACT/SF</a> and recently performed 
-          Cunningham repertory in 
-          <i><a href="https://www.hopemohr.org/2019-bridge-project" target="_blank">Signals from the West: Bay Area Artists In Conversation with Merce Cunningham at 100</a></i>.
-          Emily has also performed with The Anata Project, Talli Jackson, 
-          Marika Brussel, Alma Esperanza Cunningham, Kristin Damrow Company, 
-          Brannigan Dance Works, and SOULSKIN Dance. Emily’s choreography has been 
-          presented at numerous venues throughout the Bay Area, Georgia, and Florida. 
-          She is currently under the choreographic mentorship of RoundAntennae.
-        </p>
-        <p>
-          When she isn’t performing or choreographing, Emily teaches ballet
-          and contemporary to students ages 3 through 12 at the ODC School
-          and Steppin’ Out Dance Studio. She also enjoys working in the
-          numerous arts administration roles that she holds at ODC, FACT/SF,
-          MFDP, and Linda Bulgo’s Musical Productions.
+          When she isn’t performing or choreographing, Emily teaches ballet and contemporary to students ages 3 through 12 at the ODC School, Berkeley Ballet Theater,  and Steppin’ Out Dance Studio. She also works in administrative roles for a number of artists/companies in addition to producing her own work.
           
         </p>
       </div>
