tab index just work

--- a/bio/index.html
+++ b/bio/index.html
@@ -34,10 +34,10 @@
     <div class="contact-form"><span>x</span>
       <form method="POST" action="https://formspree.io/emilylhansel@gmail.com">
         <p>Fill out the form below to contact Emily</p>
-        <input tabindex="1" type="text" name="name" placeholder="Name" required>
-        <input tabindex="2" type="email" name="_replyto" placeholder="Email" required>
-        <textarea tabindex="3" name="message" placeholder="Type your message here" required></textarea>
-        <input class="email-send" tabindex="4" type="submit" value="Send">
+        <input type="text" name="name" placeholder="Name" required>
+        <input type="email" name="_replyto" placeholder="Email" required>
+        <textarea name="message" placeholder="Type your message here" required></textarea>
+        <input class="email-send" type="submit" value="Send">
       </form>
     </div>
     <div class="home-button"><a href="/" alt="Emily"> <img class="flip" src="../assets/img/dancing/crop/1.png"></a></div>
